+ Add modal keyboard closed procedure + Bigger modal Keyboard font

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
                 <a href="#" class="link open-login-screen"><div class ="button ripple-blue">Login</div></a>
           </div>
         </div>
+        <div class="content-block">
+          RANOLI - v2.0b1
+        </div>
     </div>
   </div>
 
@@ -238,14 +241,15 @@
         <p class="buttons-row">
           <a href="#" class="button"onclick="agregarDisplay('C')">C</a>
           <a href="#" class="button">%</a>
-          <a href="#" class="button" onclick="eliminarDisplay()"><-</a>
+          <a href="#" class="button" onclick="eliminarDisplay()"><img src = "backspace.svg" alt="backspace"/>
+</a>
           <a href="#" class="button" onclick="agregarDisplay('*')">x</a>
         </p>
         <p class="buttons-row">
           <a href="#" class="button calc-nro" onclick="agregarDisplay('7')">7</a>
           <a href="#" class="button calc-nro" onclick="agregarDisplay('8')">8</a>
           <a href="#" class="button calc-nro" onclick="agregarDisplay('9')">9</a>
-          <a href="#" class="button" onclick="agregarDisplay('/')">/</a>
+          <a href="#" class="button" onclick="agregarDisplay('/')">&#0247</a>
         </p>
         <p class="buttons-row">
           <a href="#" class="button calc-nro" onclick="agregarDisplay('4')">4</a>
