--- a/index.html
+++ b/index.html
@@ -18,15 +18,17 @@
       <div class="content-block-title">Generador de precios en CUP</div>
         <div class="content-block">
               <div class="content-block-inner">
-                <a href="#home" class="link"><div class ="button ripple-blue">Home</div></a>
+                <a href="#home" class="link"><div class ="button ripple-blue">Inicio</div></a>
+                <!--
                 <a href="#page1" class="link"><div class ="button ripple-blue">Page 1</div></a>
                 <a href="#page2" class="link"><div class ="button ripple-blue">Page 2</div></a>
-                <a href="#Config" class="link"><div class ="button ripple-blue">Configuración</div></a>
                 <a href="#" class="link open-login-screen"><div class ="button ripple-blue">Login</div></a>
+              -->
+                <a href="#Config" class="link"><div class ="button ripple-blue">Configuración</div></a>
           </div>
         </div>
         <div class="content-block">
-          RANOLI - v2.0b1
+          RANOLI - v2.0b2
         </div>
     </div>
   </div>
@@ -81,7 +83,7 @@
       <div class="view view-main">
           <div class="pages">
 
-              <!-- Home -->
+              <!-- Inicio -->
               <div class="page navbar-fixed" data-page="home">
                   <div class="navbar">
                     <div class="navbar-inner">
@@ -241,7 +243,7 @@
         <p class="buttons-row">
           <a href="#" class="button"onclick="agregarDisplay('C')">C</a>
           <a href="#" class="button">%</a>
-          <a href="#" class="button" onclick="eliminarDisplay()"><img src = "backspace.svg" alt="backspace"/>
+          <a href="#" class="button" style="width: 25px;" onclick="eliminarDisplay()"><img src = "backspace.svg" alt="backspace"/>
 </a>
           <a href="#" class="button" onclick="agregarDisplay('*')">x</a>
         </p>
