+ Implementado el calculo inverso en CUP + Corregido el texto de título en el menú izquierdo

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <!-- Contenido Menu izquierda -->
   <div class="panel-overlay">
     <div class="panel panel-left panel-cover">
-      <div class="content-block-title">Generador de precios en CUP</div>
-        <div class="content-block">
+      <div id="appTitle" class="content-block-title">Generador de <br> precios en CUP</div>
+        <div id="menuIzq" class="content-block">
               <div class="content-block-inner">
                 <a href="#home" class="link"><div class ="button ripple-blue">Inicio</div></a>
                 <!--
@@ -28,7 +28,7 @@
           </div>
         </div>
         <div class="content-block">
-          RANOLI - v2.0b3
+          RANOLI - v2.0b4
         </div>
     </div>
   </div>
@@ -224,7 +224,7 @@
       </div>
   </div>
 
-  <!-- About popover -->
+  <!-- CUP popover -->
   <div class="popover popover-about">
     <div class="popover-angle"></div>
     <div class="popover-inner">
@@ -242,7 +242,7 @@
                         </li>
                       </ul>
                     </div>
-        <a id="btnCalcular" href="#" class="button button-fill">Calcular </a>
+        <a id="btnCalcular" href="#" class="button button-fill" onclick="sumarCUP()">Calcular </a>
       </div>
     </div>
   </div>
