Starting the implementation of API data

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </div>
         </div>
         <div class="content-block">
-          RANOLI - v2.0b4
+          RANOLI - v2.0.0
         </div>
     </div>
   </div>
@@ -194,6 +194,17 @@
                               <div class="item-input">
                                 <input id="inUsdMxn" type="number" placeholder="Cambio de USD a MXN en México">
                               </div>
+                              <div class="item-content">
+                                <div class="item-media"><p>Actualizar desde <a href="https://www.sanjorgecc.com.mx/">San Jorge</a></p></div>
+                                  <div class="item-inner">
+                                    <div class="item-input">
+                                      <label class="label-switch">
+                                        <input type="checkbox" id="checkSJ">
+                                        <div class="checkbox"></div>
+                                      </label>
+                                    </div>
+                                  </div>
+                              </div>
                             </div>
                           </div>
                         </li>
@@ -203,6 +214,17 @@
                               <div class="item-title label">USD a CUP</div>
                               <div class="item-input">
                                 <input id="inUsdCup" type="number" placeholder="Cambio de USD a CUP en Cuba">
+                              </div>
+                              <div class="item-content">
+                                <div class="item-media"><p>Actualizar desde <a href="https://eltoque.com/">elToque</a></p></div>
+                                  <div class="item-inner">
+                                    <div class="item-input">
+                                      <label class="label-switch">
+                                        <input type="checkbox" id="checkToque">
+                                        <div class="checkbox"></div>
+                                      </label>
+                                    </div>
+                                  </div>
                               </div>
                             </div>
                           </div>
@@ -214,6 +236,7 @@
                               <div class="item-input">
                                 <input id="inTasa" type="number" placeholder="Tasa de ganancia por venta">
                               </div>
+                              
                             </div>
                           </div>
                         </li>
