Finish of API data implementation

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </div>
         </div>
         <div class="content-block">
-          RANOLI - v2.0.0
+          RANOLI - v2.0.2
         </div>
     </div>
   </div>
@@ -199,7 +199,7 @@
                                   <div class="item-inner">
                                     <div class="item-input">
                                       <label class="label-switch">
-                                        <input type="checkbox" id="checkSJ">
+                                        <input type="checkbox" id="checkSJ" onclick="changeCheckSJ()">
                                         <div class="checkbox"></div>
                                       </label>
                                     </div>
@@ -220,7 +220,7 @@
                                   <div class="item-inner">
                                     <div class="item-input">
                                       <label class="label-switch">
-                                        <input type="checkbox" id="checkToque">
+                                        <input type="checkbox" id="checkToque" onclick="changeCheckToque()">
                                         <div class="checkbox"></div>
                                       </label>
                                     </div>
