--- a/index.html
+++ b/index.html
@@ -213,9 +213,14 @@
                                 <div class="item-media"><p>Actualizar desde <a href="https://eltoque.com/">elToque</a></p></div>
                                   <div class="item-inner">
                                     <div class="item-input">
-                                      <label class="label-switch">
+                                      <label class="label-checkbox item-content">
                                         <input type="checkbox" id="checkToque" onclick="changeCheckToque()">
-                                        <div class="checkbox"></div>
+                                        <div class="item-media">
+                                          <i class="icon icon-form-checkbox"></i>
+                                        </div>
+                                        <div class="item-inner">
+                                          <div class="item-title">Books</div>
+                                        </div>
                                       </label>
                                     </div>
                                   </div>
