--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           </div>
         </div>
         <div class="content-block">
-          RANOLI - v2.0.5
+          RANOLI - v2.0.6
         </div>
     </div>
   </div>
@@ -209,12 +209,12 @@
                               <div class="item-input">
                                 <input id="inUsdCup" type="number" placeholder="Cambio de USD a CUP en Cuba">
                               </div>
-                              <div class="item-content">
+                              <div class="item-content" onclick="changeCheckToque()">
                                 <div class="item-media"><p>Actualizar desde <a href="https://eltoque.com/">elToque</a></p></div>
                                   <div class="item-inner">
-                                    <div class="item-input">
-                                      <label class="label-checkbox item-content">
-                                        <input type="checkbox" id="checkToque" onclick="changeCheckToque()">
+                                    <div class="item-input" >
+                                      <label class="label-checkbox item-content" >
+                                        <input type="checkbox" id="checkToque">
                                         <div class="item-media">
                                           <i class="icon icon-form-checkbox"></i>
                                         </div>
