--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
                       </ul>
 
                       <div class="content-block">
+                        <a id="Check" href="#" class="button button-fill" onclick="changeCheckSJ()">SJ </a>
                         <a id="btnGuardar" href="#home" class="button button-fill">Guardar</a>
                       </div>
 
