--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
-  <html lang="en" class="theme-green">
-  <head>
-    <meta charset="UTF-8">
-    <title>MXN a CUP</title>
+<html lang="en" class="theme-green">
+
+<head>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
+    <title>MXN a CUP</title>
+    <meta name="theme-color" content="#4caf50">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="icon" type="image/png" sizes="16x16" href="Logo%20mxn-cup%2016.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="Logo%20mxn-cup%2032.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="Logo%20mxn-cup%20192.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="Logo%20mxn-cup%20192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="Logo%20mxn-cup%20512.png">
     <link rel='stylesheet' href='./framework7.material.min.css'>
     <link rel='stylesheet' href='./framework7.material.colors.min.css'>
     <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="manifest" href="manifest.json">
 
-  </head>
-  <body onload="actualizar()">
+</head>
+
+<body onload="actualizar()">
 
   <!-- Contenido Menu izquierda -->
   <div class="panel-overlay">
@@ -28,7 +37,7 @@
           </div>
         </div>
         <div class="content-block">
-          RANOLI - v2.1.0
+          RANOLI - v2.2.0
         </div>
     </div>
   </div>
@@ -185,9 +194,16 @@
                           <div class="item-content">
                             <div class="item-inner">
                               <div class="item-title label">USD a MXN</div>
-                              <div class="item-input">
-                                <input id="inUsdMxn" type="number" placeholder="Cambio de USD a MXN en México">
-                              </div>
+                                <div class="row">
+                                  <div class="col-75">
+                                    <div class="item-input">
+                                      <input id="inUsdMxn" type="number" placeholder="Cambio de USD a MXN en México">
+                                    </div>
+                                  </div>
+                                  <div class="col-25">
+                                    <a id="btnCheckSJ" href="#" class="button button-round" onclick="changeCheckSJ()">AUTO</a>
+                                  </div>
+                                </div>
                             </div>
                           </div>
                         </li>
@@ -195,9 +211,16 @@
                           <div class="item-content">
                             <div class="item-inner">
                               <div class="item-title label">USD a CUP</div>
-                              <div class="item-input">
-                                <input id="inUsdCup" type="number" placeholder="Cambio de USD a CUP en Cuba">
-                              </div>
+                                <div class="row">
+                                  <div class="col-75">
+                                    <div class="item-input">
+                                      <input id="inUsdCup" type="number" placeholder="Cambio de USD a CUP en Cuba">
+                                    </div>
+                                  </div>
+                                  <div class="col-25">
+                                    <a id="btnCheckToque" href="#" class="button button-round" onclick="changeCheckToque()">AUTO</a>
+                                  </div>
+                                </div>  
                             </div>
                           </div>
                         </li>
@@ -213,18 +236,9 @@
                           </div>
                         </li>
                       </ul>
-                          <div id="title_inset" class="content-block-title">Obtener tasa de forma automática</div>
-                          <div class="content-block inset">
-                            <div class="buttons-row">
-                                <a id="btnCheckSJ" href="#" class="button button-round" onclick="changeCheckSJ()">MXN</a>
-                                <a id="btnCheckToque" href="#" class="button button-round" onclick="changeCheckToque()">CUP</a>
-                            </div>
-                          </div>
-
                       <div class="content-block">
                                                 <a id="btnGuardar" href="#home" class="button button-fill">Guardar</a>
                       </div>
-
                     </div>
                   </div>
               </div>
@@ -305,4 +319,5 @@
     <script type="text/javascript" src="./calculo.js"></script>
 
   </body>
+
 </html>
