--- a/index.html
+++ b/index.html
@@ -317,12 +317,8 @@
   </div>
 
     <script>
-      if ('serviceWorker' in navigator) {
-        window.addEventListener("load", ()=>{
-          navigator.serviceWorker.register("service-worker.js").then((reg)=>{
-            console.log("Service Worker registrado", reg);
-          })
-        })
+      if (typeof navigator.serviceWorker !== 'undefined') {
+        navigator.serviceWorker.register('pwabuilder-sw.js')
       }
     </script>
 
